<resources>
    <string name="app_name">Content Hub</string>

    //login page
    <string name="login_text">LOGIN</string>
    <string name="ed_email_hint">Email Id</string>
    <string name="ed_pass_hint">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>

    //register page
    <string name="creata_acc">CREATE AN ACCOUNT</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="tnc">Agree to all <u>terms and conditions</u></string>
    <string name="have_account">Already have an account?</string>

    <string name="err_first_name">Please enter Full Name.</string>
    <string name="err_last_name">Please enter Username.</string>
    <string name="err_password">Please enter Password</string>
    <string name="err_confiem_password">Please enter Confirm Password</string>
    <string name="err_confirm_not_match_password">Password and Confirm Password doesn\'t match</string>
    <string name="err_terms_not_checked">Please check the Terms and Conditions</string>
    <string name="err_email">Please enter Email Id</string>
    <string name="please_wait">Please wait…</string>
    <string name="forgot_pass_description">Enter your Email id to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="register_success">You are registered successfully</string>

    <string name="phone">Mobile no.</string>
    <string name="address">Address</string>
    <string name="profile_image">Profile_image</string>
    <string name="profile">Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_save">Save</string>
    <string name="err_mobile_number">Please enter mobile number</string>
    <string name="profile_updated">Profile updated successfully</string>


    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_user_profile">Profile</string>


    <string name="action_settings">Settings</string>
    <string name="settings_personal_info">Personal Information</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_account">Account settings</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_support">Support</string>
    <string name="settings_get_help">Get help</string>
    <string name="settings_tnc">See terms and condition</string>
    <string name="settings_actions">Actions</string>
    <string name="settings_logout">Log out</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="popularity_level">Popularity Lvl.</string>
    <string name="upload_text">Upload photo</string>
    <string name="nothing_uploaded">No content uploaded to display</string>
    <string name="add_caption">Add Image Title</string>
    <string name="upload_image_final">Uplaod</string>
    <string name="click_here_to_select_photo">Click here to select a photo</string>
    <string name="image_upload_success">Photo uploaded successfully!!!</string>
    <string name="uploading_image">Uploading photo…</string>
    <string name="caption">"Caption: "</string>


    <string name="delete_content_image">Delete this post</string>
    <string name="delete_image_confirm">Do you want to delete this post?</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ok">OK</string>
    <string name="uploaded_by">Uploaded by: </string>
    <string name="btn_download">Download</string>
    <string name="btn_likes">Likes</string>
    <string name="btn_share">Share</string>
    <string name="search_bar_text">Search images</string>
    <string name="no_search_result">Sorry can\'t find images</string>

    //image categories
    <string-array name="image_categories">
        <item>Select the category</item>
        <item>Abstract</item>
        <item>Action</item>
        <item>Aerial</item>
        <item>Architecture</item>
        <item>Astro photography</item>
        <item>Beauty</item>
        <item>Bikes</item>
        <item>Bird</item>
        <item>Commercial</item>
        <item>Documentary</item>
        <item>Fashion</item>
        <item>Food</item>
        <item>Firework</item>
        <item>Landscape</item>
        <item>Macro</item>
        <item>Nature</item>
        <item>Night</item>
        <item>Portraits</item>
        <item>Sports</item>
        <item>Street Photography</item>
        <item>Travel</item>
        <item>Scientific</item>
        <item>Underwater</item>
        <item>Vintage</item>
        <item>Weddings</item>
        <item>Wildlife</item>
    </string-array>
</resources>